// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: LevelBasee
message LevelBasee
{	
	
	
	repeated ExpDefine Exp = 1; // Exp

}

// Defined in table: Exp
message ExpDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional int32 Level = 2; 
	
	
	optional int32 Exp = 3; 
	
	
	optional string Title = 4; 

}

